@@ -596,13 +596,10 @@ SkCanvas
 void drawPaint(const SkPaint& paint);
 
 [Canvas_drawPatch]
-SkCanvas
-void drawPatch(const SkPoint cubics[12], const SkColor colors[4], const SkPoint texCoords[4], SkBlendMode mode, const SkPaint& paint);
-
 [Canvas_drawPatch_2_a]
 [Canvas_drawPatch_2_b]
 SkCanvas
-void drawPatch(const SkPoint cubics[12], const SkColor colors[4], const SkPoint texCoords[4], const SkPaint& paint);
+void drawPatch(const SkPoint cubics[12], const SkColor colors[4], const SkPoint texCoords[4], SkBlendMode mode, const SkPaint& paint);
 
 [Canvas_drawPath]
 SkCanvas
